[metadata]
name = PlantStation
description = A little daemon to keep plants watered with Raspberry Pi
author = Jakub Kowalski
author-email = pankowalski@icloud.com
license = mit
long-description = file: README.md, CHANGELOG.md, Authors.md, LICENSE.txt
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/j-kk/PlantStation
project-urls =
    Documentation = https://github.com/j-kk/PlantStation/wiki
platforms = Linux
classifiers =
    Development Status :: 3 - Alpha
    Environment :: No Input/Output (Daemon)
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    gpiozero
    lockfile
    pigpio
    python-daemon
    python-dateutil

python_requires = >=3.6
scripts =
    run = bin/main

[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
# console_scripts =
#     fibonacci = plantstation.skeleton:run

;[test]
;# py.test options when running `python setup.py test`
;# addopts = --verbose
;extras = True
;
;[tool:pytest]
;addopts =
;    --cov plantstation --cov-report term-missing
;    --verbose
;norecursedirs =
;    dist
;    build
;    .tox
;testpaths = tests
;
;[aliases]
;dists = bdist_wheel
;
;[bdist_wheel]
;# Use this option if your package is pure-python
;universal = 1
;
;[build_sphinx]
;source_dir = docs
;build_dir = build/sphinx

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

