# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = PlantStation
description = A little daemon to keep plants watered with Raspberry Pi
author = Jakub
author-email = k_jakub@icloud.com
license = mit
long-description = file: README.md, CHANGELOG.md, LICENSE.txt
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/j-kk/PlantStation
project-urls =
    Documentation = https://github.com/j-kk/PlantStation/wiki
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: No Input/Output (Daemon)
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8




[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires =
    docutils
    gpiozero
    lockfile
    pigpio
    python-daemon
    python-dateutil

python_requires = >=3.6

[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = plantstation.module:function
# For example:
# console_scripts =
#     fibonacci = plantstation.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
;addopts =
;    --cov plantstation --cov-report term-missing
;    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
