[metadata]
name = PlantStation
author = Jakub Kowalski
license_file = LICENSE
version = 0.3.2
description = A little daemon to keep plants watered with Raspberry Pi
long_description = file: README.md
url = https://github.com/j-kk/PlantStation/
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Development Status :: 4 - Beta
        Environment :: No Input/Output (Daemon)
        Environment :: Console

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    regex
    setuptools
    lockfile
    daemon
    gpiozero
    PyInquirer
    setuptools

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest

docs =
    sphinx

[options.entry_points]
console_scripts =
    PlantStation = PlantStation.__main__:run
    PlantSetup = PlantStation.configurer:run

[test]
addopts = --verbose
extras = True

[tool:pytest]
norecursedirs =
    dist
    build
testpaths = tests

[build_sphinx]
# Options for Sphinx build
source_dir = docs
build_dir = build/sphinx